# AutoScheduler

./: .gitignore  CMakeLists.txt  README.md  forthefuture.html
Services/Gateway/src/: main.cpp
Services/ScheduleService/src/builders/: schedule_builder.cpp
Services/ScheduleService/src/core/: schedule_parser.cpp
forthefuture_files/: main.min.js  style.css
services/AuthService/: AuthService.cpp  AuthService.h  CMakeLists.txt  Dockerfile  main.cpp
services/AuthService/include/core/: auth_parser.h
services/AuthService/include/server/: auth_server.h
services/AuthService/src/: main.cpp
services/AuthService/src/core/: auth_parser.cpp
services/AuthService/src/server/: auth_server.cpp
services/Gateway/: CMakeLists.txt
services/Gateway/include/server/: gateway_server.h
services/ScheduleService/: CMakeLists.txt  main.cpp  scheduleservice.cpp  scheduleservice.h
services/ScheduleService/include/builders/: schedule_builder.h
services/ScheduleService/include/core/: core_schedule_service.h  schedule_parser.h  schedule_service.h
services/ScheduleService/include/servers/: schedule_server.h
services/ScheduleService/src/: main.cpp
services/ScheduleService/src/builders/: schedule_builder.cpp
services/ScheduleService/src/core/: http_client.cpp  schedule_parser.cpp  schedule_service.cpp
services/ScheduleService/src/servers/: schedule_server.cpp
src/core/include/scheduler/: types.hpp
src/services/auth/: CMakeLists.txt
src/services/gateway/: Dockerfile
src/services/gateway/src/: main.cpp
src/services/schedule/: Dockerfile
src/services/schedule/include/core/: http_client.h  schedule_parser.h  schedule_service.h
src/services/schedule/include/servers/: schedule_server.h
src/services/schedule/src/core/: http_client.cpp  schedule_parser.cpp  schedule_service.cpp
